Fixed video height on smaller screen sizes

--- a/css/style.scss
+++ b/css/style.scss
@@ -34,7 +34,7 @@ body {
 
   video {
     @include pseudo-after(0, 0, 0, 0);
-    @include sameWH(100%);
+    max-height: 100%;
     background-color: #000;
   }
   
